# school-cs132

./: .clang-format  .gitignore  .gitmodules
Lecture 02/: time.cpp
Program 01 - Knights Tour/: knight-tiny.cpp  knight.cpp
Program 02a - Comparing CStrings/: trstrcmp.cpp
Program 02a - Comparing CStrings/docs/: Doxyfile
Program 02b - MYString v1/: CMakeLists.txt  TRString.cpp  TRString.h  test.cpp
Program 02b - MYString v1/app/: CMakeLists.txt  format_words.cpp  test.cpp
Program 02b - MYString v1/docs/: CMakeLists.txt
Program 02b - MYString v1/include/: TRString.h  string_utils.h
Program 02b - MYString v1/src/: CMakeLists.txt  TRString.cpp  string_utils.cpp
Program 02b - MYString v1/tests/: CMakeLists.txt  TRString_test.cpp
Program 03 - MYString v2/: CMakeLists.txt
Program 03 - MYString v2/app/: CMakeLists.txt  format_words.cpp  infile2.txt
Program 03 - MYString v2/docs/: index.rst
Program 03 - MYString v2/include/: TRString.h  string_utils.h
Program 03 - MYString v2/src/: CMakeLists.txt  TRString.cpp  string_utils.cpp
Program 03 - MYString v2/tests/: CMakeLists.txt  TRString_test.cpp  string_utils_test.cpp
Program 04 - Linked List/: CMakeLists.txt
Program 04 - Linked List/app/: CMakeLists.txt  Linked List Assignment.cpp
Program 04 - Linked List/include/: DblLinkedList.h
Program 04 - Linked List/src/: CMakeLists.txt  DblLinkedList.cpp
Program 04 - Linked List/tests/: CMakeLists.txt  DblLinkedList_test.cpp
Program 04a - Linked List MYString/: CMakeLists.txt
Program 04a - Linked List MYString/app/: CMakeLists.txt  format_words.cpp  infile3.txt
Program 04a - Linked List MYString/docs/: CMakeLists.txt  Doxyfile.in  conf.py
Program 04a - Linked List MYString/include/: TRString.h  string_utils.h
Program 04a - Linked List MYString/src/: TRString.cpp  string_utils.cpp
Program 04a - Linked List MYString/tests/: TRString_test.cpp  string_utils_test.cpp
Program 05 - Merge Lists/: CMakeLists.txt
Program 05 - Merge Lists/app/: CMakeLists.txt  MergeLinkedList.cpp
Program 05 - Merge Lists/include/: LkList.h
Program 06 - Tree Data Structure/: CMakeLists.txt
Program 06 - Tree Data Structure/tests/: CMakeLists.txt  Tree_test.cpp
Program 07 - Linked List Template/: cmake
(+15 files in other folders)
